# desafio-fazenda-django-api

./: .env.example  Dockerfile  Makefile  README.md  create_superuser.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
farmers/: admin.py  models.py
farmers/migrations/: 0001_initial.py
locale/pt_BR/LC_MESSAGES/: django.po
setup/: settings.py
