[project]
name = "desafio-fazenda-django-api"
version = "0.1.0"
description = """Este repositório contém um desafio para uma vaga de trabalho.

Trata-se de um sistema para controle de produtores rurais e fazendas,
desenvolvido de acordo com os requisitos descritos neste link https://github.com/brain-ag/trabalhe-conosco/tree/a6e2b535807db3475843ea2b0b4a50bb8a99a1fb"""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.2.*",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.10",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
